Translation update done using Pootle.

--- a/po/sq.po
+++ b/po/sq.po
@@ -2755,10 +2755,9 @@ msgid "(continued)"
 msgstr "(vazhdon)"
 
 #: libraries/export/latex.php:15
-#, fuzzy
 #| msgid "Structure of table __TABLE__"
 msgid "Structure of table @TABLE@"
-msgstr "Struktura e tabelës __TABLE__"
+msgstr "Struktura e tabelës @TABLE@"
 
 #: libraries/export/latex.php:26
 msgid "LaTeX"
