Translation update done using Pootle.

--- a/po/eu.po
+++ b/po/eu.po
@@ -2766,10 +2766,9 @@ msgid "(continued)"
 msgstr ""
 
 #: libraries/export/latex.php:15
-#, fuzzy
 #| msgid "Structure of table __TABLE__"
 msgid "Structure of table @TABLE@"
-msgstr "__TABLE__ taularen egitura"
+msgstr "@TABLE@ taularen egitura"
 
 #: libraries/export/latex.php:26
 msgid "LaTeX"
