Translation update done using Pootle.

--- a/po/hr.po
+++ b/po/hr.po
@@ -4,14 +4,16 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 10:29+0200\n"
-"PO-Revision-Date: 2010-03-12 09:13+0100\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2010-07-21 14:54+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: croatian <hr@li.org>\n"
-"Language: \n"
+"Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.5.3\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:37 browse_foreigners.php:58
 #: libraries/display_tbl.lib.php:416 server_privileges.php:1506
@@ -2839,10 +2841,9 @@ msgid "Table structure for table"
 msgstr "Tablična struktura za tablicu"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Sadržaj tablice __TABLE__"
+msgstr "Sadržaj tablice @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8434,325 +8435,3 @@ msgstr "Preimenuj tablicu u"
 #~ "Nije moguće upotrijebiti funkcije iconv, libiconv ili recode_string, iako "
 #~ "izgleda da su sva potrebna proširenja učitana. Provjerite svoju PHP "
 #~ "konfiguraciju."
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Dodaj novo polje"
-
-#~ msgid "Field"
-#~ msgstr "Polje"
-
-#~ msgid "Records"
-#~ msgstr "Zapisi"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Polja završena s"
-
-#~ msgid "Fields"
-#~ msgstr "Polja"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Polje %s je odbačeno"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Pogledajte slika/jpeg: inline"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"zipano\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"gzipano\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"bzipano\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Dodaj prilagođeni komentar u zaglavlje (\"\\n\" razdvaja retke)"
-
-#, fuzzy
-#~ msgid "and"
-#~ msgstr "I"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Onemogućeno"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Omogućeno"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Popravi"
-
-#~ msgid "Calendar"
-#~ msgstr "Kalendar"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 kompatibilno"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Nije moguće učitati zadanu konfiguraciju iz: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Izradi indeks &nbsp;%s&nbsp;stupaca"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Izradi tablicu"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "bez kompresije"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Isprazni tablicu (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Neispravan indeks poslužitelja: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Opis"
-
-#, fuzzy
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "bez kompresije"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Shema \"%s\" baza podataka - stranica %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Tablica \"%s\" ne postoji!"
-
-#~ msgid "running on %s"
-#~ msgstr "Izvršava se pri %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr ""
-#~ "Vrijednost omjera suviše je malen kako bi shema stala na jednu stranicu"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Pokretanje sesije nije moguće uslijed pogrešaka. Provjerite pogreške koje "
-#~ "ispisuje vaš PHP i/ili datoteku zapisnika poslužitelja i pravilno "
-#~ "konfigurirajte vašu instalaciju PHP-a."
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Ipak, pri posljednjem prijelazu nikakvi podaci nisu bili raščlanjeni. To "
-#~ "znači da phpMyAdmin neće biti u mogućnosti završiti ovaj uvoz sve dok ne "
-#~ "povećate vremenska ograničenja unutar php."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "bez kompresije"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "bez kompresije"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "Podari sve privilegije imenima s džokerima (korisničkoime_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Tablica \"%s\" ne postoji!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Nije moguće učitati zadanu konfiguraciju iz: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ "Neispravan naziv za poslužitelj %1$s. Molimo, pregledajte svoju "
-#~ "konfiguraciju."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Pogreška tijekom preimenovanja tablice %1$s u %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "Nije moguće učitati proširenje [a@http://php.net/%1$s@Documentation]"
-#~ "[em]%1$s[/em][/a] . Provjerite svoju PHP konfiguraciju."
-
-#, fuzzy
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Prijavljivanje na MySQL poslužitelj nije moguće"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Postoji mogućnost da ste pronašli nedostatak u SQL raščlanjivaču. "
-#~ "Temeljito proučite vaš upit i provjerite ispravan unos navodnika. Jedan "
-#~ "od mogućih razloga je i da ste učitali datoteku s binarnim vrijednosti "
-#~ "izvan prostora s navodnicima. Vaš upit također možete provjeriti u "
-#~ "naredbenom retku MySQL-a. Ispis pogreške MySQL poslužitelja može vam "
-#~ "pomoći u dijagnosticiranju problema. Ako i dalje postoje problemi ili ako "
-#~ "raščlanjivač ne uspijeva u zadacima koji uspijevaju u naredbenom retku, "
-#~ "suzite svoj unos SQL upita na samo onaj upit koji izaziva probleme i "
-#~ "podnesite prijavu o nedostatku zajedno s dijelom podatka u donjem "
-#~ "odjeljku CUT:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV"
-
-#~ msgid "Copy"
-#~ msgstr "Kopiraj"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Izbriši korisnike i potom ponovo učitaj privilegije."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Ovo je najčišći način, ali ponovno učitavanje privilegija može potrajati."
-
-#~ msgid "has been altered."
-#~ msgstr "izmijenjeno je."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer ne podržava ovu funkciju."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "\"Izbrisani\" će korisnici i dalje moći pristupati poslužitelju sve dok "
-#~ "se privilegije ne učitaju ponovo."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Samo izbriši korisnike iz tablice privilegija."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Dopušta izvršavanje pohranjenih postupaka. Nema učinka u ovoj verziji "
-#~ "MySQL-a."
-
-#~ msgid "Process list"
-#~ msgstr "Popis procesa"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Ponovno učitaj privilegije"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Korisnici će i dalje imati privilegiju USAGE (Upotreba) sve dok se "
-#~ "privilegije ponovno ne učitaju."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Izvorno MS Excel oblikovanje"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Odaberi sve"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Odaberi sve"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Umetni"
-
-#, fuzzy
-#~| msgid "Update Query"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Ažuriraj upit"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Izbriši"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "Zahvaćeno redaka: %1$d."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Sij0"
-
-#~ msgid "Jan1"
-#~ msgstr "Sij1"
-
-#~ msgid "Jan2"
-#~ msgstr "Sij2"
