Translation update done using Pootle.

--- a/po/hr.po
+++ b/po/hr.po
@@ -2850,10 +2850,9 @@ msgid "(continued)"
 msgstr "(nastavljeno)"
 
 #: libraries/export/latex.php:15
-#, fuzzy
 #| msgid "Structure of table __TABLE__"
 msgid "Structure of table @TABLE@"
-msgstr "Struktura tablice __TABLE__"
+msgstr "Struktura tablice @TABLE@"
 
 #: libraries/export/latex.php:26
 msgid "LaTeX"
