--- a/po/da.po
+++ b/po/da.po
@@ -4,14 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 10:29+0200\n"
-"PO-Revision-Date: 2010-03-12 09:13+0100\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2010-07-21 14:55+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: danish <da@li.org>\n"
-"Language: \n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.5.3\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:37 browse_foreigners.php:58
 #: libraries/display_tbl.lib.php:416 server_privileges.php:1506
@@ -2790,10 +2791,9 @@ msgid "Table structure for table"
 msgstr "Struktur-dump for tabellen"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Indhold af tabel __TABLE__"
+msgstr "Indhold af tabel @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8291,279 +8291,3 @@ msgstr ""
 #~ msgstr ""
 #~ "Kan ikke bruge iconv ejheller libiconv eller recode_string funktionen "
 #~ "omend udvidelsen ser ud til at være indlæst. Check din PHP-konfiguration."
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Tilføj nyt felt"
-
-#~ msgid "Field"
-#~ msgstr "Feltnavn"
-
-#~ msgid "Records"
-#~ msgstr "Poster"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Felter afsluttet med"
-
-#~ msgid "Fields"
-#~ msgstr "Felter"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Felt %s er slettet"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Se under image/jpeg: inline"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"zippet\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"gzipped\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"bzipped\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Tilføj tilpassede kommentarer i headeren (\\n deler linjer)"
-
-#~ msgid "Calendar"
-#~ msgstr "Kalender"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 kompatibel"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Kunne ikke indlæse standardkonfiguration fra: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Dan et indeks på&nbsp;%s&nbsp;kolonner"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Flush tabellen (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Ugyldigt server indeks: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Beskrivelse"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Skematik for databasen \"%s\" - Side %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Tabellen \"%s\" findes ikke!"
-
-#~ msgid "running on %s"
-#~ msgstr "kører på %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr ""
-#~ "Skaleringsfaktoren er for lille til at tilpasse skematikken til en side"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Kan ikke starte session uden fejl, tjek venligst fejl i din PHP og/eller "
-#~ "webserver log fil og konfigurer din PHP installation ordentligt."
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Desværre blev der ikke parset nogen data ved sidste kørsel, dette betyder "
-#~ "normalt at phpMyAdmin ikke vil være i stand til at gennemføre importen "
-#~ "med mindre du forøger PHP-tidsbegrænsningerne."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Ingen"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Ingen"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "Tildel alle privilegier til jokertegn-navn (brugernavn_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Tabellen \"%s\" findes ikke!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Kunne ikke indlæse standardkonfiguration fra: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ "Ugyldigt hostnavn for server %1$s. Gennemgå venligst din konfiguration."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Fejl ved omdøbning af tabel  %1$s til %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "Kan ikke indlæse [a@http://php.net/%1$s@Dokumentation][em]%1$s[/em][/a] "
-#~ "udvidelsen. Tjek venligst din PHP-konfiguration."
-
-#, fuzzy
-#~| msgid "Cannot log in to the MySQL server"
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Kan ikke logge ind på MySQL-serveren"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Det er muligt at du har fundet en fejl i SQL-parseren. Undersøg venligst "
-#~ "din forespørgsel nøje, og check at anførselstegn er rigtige og ikke giver "
-#~ "konflikter. Andre fejlårsager kan være at du uploader en fil med binær "
-#~ "udenfor et lukket tekstområde. Du kan også prøve din forespørgsel i MySQL "
-#~ "kommandolinje-interfacet. MySQL-serverens fejlmelding der følger "
-#~ "herunder, hvis der er nogen, kan også hjælpe dig med at finde problemet. "
-#~ "Hvis du stadig har probemer eller hvis parseren fejler hvor "
-#~ "kommandolinjeinterfacet lykkes, reducer din SQL-forespørgselsinput til "
-#~ "den ene forespørgsel der forårsager problemet, og indsend en fejlrapport "
-#~ "med datablokken i KLIP-sektionen herunder:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV-data"
-
-#~ msgid "Copy"
-#~ msgstr "Kopi"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Slet brugerne og genindlæs privilegier bagefter."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Dette er den sikreste metode, men genindlæsning af privilegierne kan tage "
-#~ "noget tid."
-
-#~ msgid "has been altered."
-#~ msgstr "er ændret."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer understøtter ikke denne funktion."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "De &quot;slettede&quot; brugere kan stadig tilgå serveren som de plejer "
-#~ "indtil privilegierne genindlæses."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Bare slet brugerne fra privilegietabellerne."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Tillader kørsel af gemte procedurer; Har ingen effekt i denne MySQL-"
-#~ "version."
-
-#~ msgid "Process list"
-#~ msgstr "Procesliste"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Genindlæs privilegier"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Bruger(e) vil fortsat have USAGE-privilegiet indtil privilegierne "
-#~ "genindlæses."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Fødte MS Excel-data"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Vælg alle"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Vælg alle"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Indsæt"
-
-#, fuzzy
-#~| msgid "Update Query"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Opdater forespørgsel"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Slet"
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
