Translation update done using Pootle.

--- a/po/hu.po
+++ b/po/hu.po
@@ -4,14 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 13:53+0200\n"
-"PO-Revision-Date: 2010-03-12 09:15+0100\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2010-07-22 02:22+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: hungarian <hu@li.org>\n"
-"Language: \n"
+"Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.5.3\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:37 browse_foreigners.php:58
 #: libraries/display_tbl.lib.php:416 server_privileges.php:1506
@@ -2853,10 +2854,9 @@ msgid "Table structure for table"
 msgstr "Tábla szerkezet:"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "__TABLE__ tábla tartalma"
+msgstr "@TABLE@ tábla tartalma"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8692,333 +8692,3 @@ msgstr "Tábla átnevezése"
 
 #~ msgid "Default character set"
 #~ msgstr "Alapértelmezett karakterkészlet"
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Új mező hozzáadása"
-
-#~ msgid "Field"
-#~ msgstr "Mező"
-
-#~ msgid "Records"
-#~ msgstr "Rekordok"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Mező vége"
-
-#~ msgid "Fields"
-#~ msgstr "Mezők száma"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "A(z) %s mező eldobása megtörtént"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Lásd image/jpeg megtekintése: bent"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"zip tömörítés\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"gzip tömörítés\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"bzip tömörítés\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Egyéni megjegyzés hozzáadása a fejléchez (a \\n töri a sorokat)"
-
-#~ msgid "and"
-#~ msgstr "és"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Letiltott"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Engedélyezett"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Javítás"
-
-#~ msgid "Calendar"
-#~ msgstr "Naptár"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 kompatibilis"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr ""
-#~ "Nem lehetett betölteni az alapértelmezett konfigurációt innen: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Index készítése a(z) %s. oszlopon"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Tábla létrehozása"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Nincs"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Tábla kiírása (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Érvénytelen szerverindex: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Leírás"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Nincs"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "A(z) \"%s\" adatbázis sémája - %s. oldal"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Nem létezik a(z) \"%s\" tábla!"
-
-#~ msgid ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-#~ msgstr ""
-#~ "Ez a MySQL-szerver mint %s működik a <b>többszörözéses</b> folyamatban. A "
-#~ "szerveren lévő többszörözéses állapotról a <a href=\"#replication"
-#~ "\">többszörözés részben</a> kaphat bővebb információt."
-
-#~ msgid "running on %s"
-#~ msgstr ": %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "A mérettényező túl kicsi, hogy a séma ráférjen egy oldalra"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "A munkamenet nem indítható hibák nélkül. Ellenőrizze a PHP és/vagy a "
-#~ "webszerver naplófájljába bejegyzett hibákat, és konfigurálja megfelelően "
-#~ "a PHP telepítését."
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Az utolsó futáskor azonban nem került adat elemzésre, ami általában azt "
-#~ "jelenti, hogy a phpMyAdmin nem tudja befejezni ezt az importálást, ha Ön "
-#~ "nem növeli meg a PHP időkorlátozását."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Nincs"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Nincs"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr ""
-#~ "Az összes jog engedélyezése karakterhelyettesítős néven (username\\_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Nem létezik a(z) \"%s\" tábla!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr ""
-#~ "Nem lehetett betölteni az alapértelmezett konfigurációt innen: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ "A(z) %1$s szerver hosztneve érvénytelen. Ellenőrizze a beállításokat."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Hiba történt a(z) %1$s tábla %2$s névre történő átnevezésekor"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "Nem tölthető be a [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~ "kiterjesztés. Ellenőrizze a PHP beállításait."
-
-#, fuzzy
-#~| msgid "Could not connect to MySQL server"
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Nem lehetett kapcsolódni a MySQL-szerverhez"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Esély van rá, hogy hibát találhatott az SQL szintaktikai elemzőben "
-#~ "(parser). Kérjük, hogy vizsgálja meg gondosan a lekérdezésedet, "
-#~ "ellenőrizze, hogy az idézőjelek jók-e és jól illeszkednek-e. Más "
-#~ "lehetséges hiba oka lehet, hogy binárisan töltött fel egy fájlt az "
-#~ "idézett szövegmezőn kívül. Kipróbálhatja a lekérdezésedet a MySQL "
-#~ "parancssoros kezelőfelületén.  A MySQL szerver hibakimenete alul látható, "
-#~ "ha van ott valami, az segíthet a hiba okának kiderítésében. Ha még mindig "
-#~ "gondjai vannak, vagy a szintaktikai elemző (parser) hibát jelez, ahol a "
-#~ "parancssoros kezelőfelületen végrehajtódik, redukálja a problémát okozó "
-#~ "SQL lekérdezést egy egyszerű lekérdezéssé, és küldjön be hibabejelentést "
-#~ "az alsó Kivágás részben levő adatokkal együtt:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV"
-
-#~ msgid "Copy"
-#~ msgstr "Másolás"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Törölje a felhasználót, azután töltse be újra a jogokat."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Ez a legtisztább út, viszont a jogok újratöltése eltarthat egy ideig."
-
-#~ msgid "has been altered."
-#~ msgstr "megváltozott."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Az Internet Explorer nem támogatja ezt a funkciót."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "A &quot;törölt&quot; felhasználók a jogok újratöltéséig még "
-#~ "hozzáférhetnek a szerverhez."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Egyszerűen törölje a felhasználókat a jogtáblákból."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Engedélyezi a tárolt eljárások futtatását; még nem valósult meg ebben a "
-#~ "MySQL verzióban."
-
-#~ msgid "Process list"
-#~ msgstr "Folyamatlista"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Jogok újratöltése"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr "A felhasználóknak még van USAGE joguk a jogok újratöltéséig."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Natív MS Excel formátum"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Mind kijelölése"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Mind kijelölése"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Beszúrás"
-
-#, fuzzy
-#~| msgid "Update Query"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Lekérdezés frissítése"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Törlés"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "%1$d sor érintett."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "jan.0"
-
-#~ msgid "Jan1"
-#~ msgstr "jan.1"
-
-#~ msgid "Jan2"
-#~ msgstr "jan.2"
